--- a/08-deep-learning/Homework_08_Return.ipynb
+++ b/08-deep-learning/Homework_08_Return.ipynb
@@ -1433,7 +1433,7 @@
    "id": "8682e469-d4cb-4934-b784-838a4e65aef2",
    "metadata": {},
    "source": [
-    "#### Question 02 Answer: `896`"
+    "#### Question 02 Answer: `20072512`"
    ]
   },
   {
