--- a/08-deep-learning/Homework_08_Return.ipynb
+++ b/08-deep-learning/Homework_08_Return.ipynb
@@ -1301,11 +1301,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "676ac40b-77dd-4b05-8279-bfaed3a4e35e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create the model.\n",
     "model = tf.keras.models.Sequential([\n",
     "    tf.keras.Input(shape=(200, 200, 3)),\n",
     "    tf.keras.layers.Conv2D(32, (3, 3), activation='relu'),\n",
@@ -1318,11 +1319,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "bc99c8d5-a83e-4bc3-ae4f-09590f66b227",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Compile the model.\n",
     "model.compile(loss='binary_crossentropy',\n",
     "             optimizer=tf.keras.optimizers.SGD(learning_rate=0.002, momentum=0.8),\n",
     "             metrics=['accuracy'])"
@@ -1330,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "7d9d0596-05d6-4fbb-bcfb-aa19c2454730",
    "metadata": {},
    "outputs": [
@@ -1425,6 +1427,7 @@
     }
    ],
    "source": [
+    "# Return model summary.\n",
     "model.summary()"
    ]
   },
@@ -1655,7 +1658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "bdedbdd0-c85a-4052-961d-5bcb99b29c9f",
    "metadata": {},
    "outputs": [
@@ -1671,6 +1674,7 @@
     }
    ],
    "source": [
+    "# Return train accuracy median.\n",
     "train_accuracy_median = np.median(accuracy)\n",
     "train_accuracy_median"
    ]
@@ -1700,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "5bbd70dd-5e70-415c-80e4-63f70ddeadbb",
    "metadata": {},
    "outputs": [
@@ -1716,6 +1720,7 @@
     }
    ],
    "source": [
+    "# Return train loss standard deviation.\n",
     "train_loss_std = np.std(loss)\n",
     "train_loss_std"
    ]
@@ -1830,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "8a718bec-ae7f-4375-8969-b218cc5d58d0",
    "metadata": {},
    "outputs": [
@@ -1846,6 +1851,7 @@
     }
    ],
    "source": [
+    "# return mean test loss.\n",
     "val_loss_mean = np.mean(val_loss)\n",
     "val_loss_mean"
    ]
@@ -1927,7 +1933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "f43e0378-d08d-4e8f-9370-e6bc5c0a809a",
    "metadata": {},
    "outputs": [
@@ -1947,12 +1953,13 @@
     }
    ],
    "source": [
+    "# Return last five accuracy.\n",
     "val_accuracy[5:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "797a3460-1e48-43fa-8087-d8309b81c071",
    "metadata": {},
    "outputs": [
@@ -1968,6 +1975,7 @@
     }
    ],
    "source": [
+    "# Return test accuracy average.\n",
     "mean_test_last_5 = np.mean(val_accuracy[5:])\n",
     "mean_test_last_5"
    ]
