--- a/09-serverless/Homework_09_Return.ipynb
+++ b/09-serverless/Homework_09_Return.ipynb
@@ -52,13 +52,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6bdd3284-d2bc-47b8-9bd4-5ae768778d12",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define link to data.\n",
-    "LINK = '../data/hw_09/'"
+    "LINK = '../data/'"
    ]
   },
   {
